Fix centering for splash on mobile

--- a/main.css
+++ b/main.css
@@ -201,7 +201,7 @@ section {
   }
   #section-splash .valign-wrapper {
     height: 100%;
-    width: 85%;
+    width: 95%;
     margin: auto;
   }
   #section-what-we-do {
